src/php/parser/y.output

state 0
	$accept: .start $end 
	top_statement_list: .    (79)

	.  reduce 79 (src line 360)

	top_statement_list  goto 2
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  top_statement_list.    (1)
	top_statement_list:  top_statement_list.top_statement 

	$end  reduce 1 (src line 301)
	error  shift 4
	T_INCLUDE  shift 88
	T_INCLUDE_ONCE  shift 89
	T_EXIT  shift 70
	T_IF  shift 47
	T_LNUMBER  shift 93
	T_DNUMBER  shift 94
	T_STRING  shift 36
	T_VARIABLE  shift 105
	T_INLINE_HTML  shift 27
	T_CONSTANT_ENCAPSED_STRING  shift 110
	T_ECHO  shift 26
	T_DO  shift 18
	T_WHILE  shift 17
	T_FOR  shift 19
	T_FOREACH  shift 30
	T_DECLARE  shift 31
	T_SWITCH  shift 20
	T_BREAK  shift 21
	T_CONTINUE  shift 22
	T_GOTO  shift 35
	T_FUNCTION  shift 37
	T_CONST  shift 13
	T_RETURN  shift 23
	T_TRY  shift 33
	T_THROW  shift 34
	T_USE  shift 12
	T_GLOBAL  shift 24
	T_UNSET  shift 29
	T_ISSET  shift 86
	T_EMPTY  shift 87
	T_HALT_COMPILER  shift 10
	T_CLASS  shift 39
	T_TRAIT  shift 40
	T_INTERFACE  shift 41
	T_LIST  shift 51
	T_ARRAY  shift 109
	T_CLASS_C  shift 102
	T_TRAIT_C  shift 98
	T_METHOD_C  shift 99
	T_FUNC_C  shift 100
	T_LINE  shift 95
	T_FILE  shift 96
	T_START_HEREDOC  shift 103
	T_NAMESPACE  shift 11
	T_NS_C  shift 101
	T_DIR  shift 97
	T_NS_SEPARATOR  shift 112
	T_EVAL  shift 90
	T_REQUIRE  shift 91
	T_REQUIRE_ONCE  shift 92
	T_NEW  shift 85
	T_CLONE  shift 53
	T_PRINT  shift 74
	T_YIELD  shift 75
	T_STATIC  shift 25
	T_ABSTRACT  shift 77
	T_FINAL  shift 78
	T_INC  shift 54
	T_DEC  shift 55
	T_YIELD_FROM  shift 76
	T_INT_CAST  shift 63
	T_DOUBLE_CAST  shift 64
	T_STRING_CAST  shift 65
	T_ARRAY_CAST  shift 66
	T_OBJECT_CAST  shift 67
	T_BOOL_CAST  shift 68
	T_UNSET_CAST  shift 69
	'"'  shift 104
	'`'  shift 73
	'{'  shift 14
	';'  shift 32
	'('  shift 60
	'['  shift 52
	'-'  shift 57
	'+'  shift 56
	'!'  shift 58
	'~'  shift 59
	'@'  shift 71
	'$'  shift 106
	.  error

	top_statement  goto 3
	name  goto 107
	statement  goto 5
	function_declaration_statement  goto 6
	class_declaration_statement  goto 7
	trait_declaration_statement  goto 8
	interface_declaration_statement  goto 9
	expr  goto 28
	variable  goto 44
	expr_without_variable  goto 45
	new_expr  goto 61
	class_name  goto 82
	simple_variable  goto 79
	internal_functions_in_yacc  goto 62
	scalar  goto 72
	function_call  goto 81
	variable_class_name  goto 83
	dereferencable_scalar  goto 84
	constant  goto 80
	dereferencable  goto 50
	callable_expr  goto 108
	callable_variable  goto 48
	static_member  goto 49
	if_stmt  goto 15
	alt_if_stmt  goto 16
	if_stmt_without_else  goto 42
	alt_if_stmt_without_else  goto 43
	class_modifier  goto 46
	namespace_name  goto 111
	class_modifiers  goto 38

state 3
	top_statement_list:  top_statement_list top_statement.    (78)

	.  reduce 78 (src line 346)


state 4
	top_statement:  error.    (85)

	.  reduce 85 (src line 438)


state 5
	top_statement:  statement.    (86)

	.  reduce 86 (src line 446)


state 6
	top_statement:  function_declaration_statement.    (87)

	.  reduce 87 (src line 452)


state 7
	top_statement:  class_declaration_statement.    (88)

	.  reduce 88 (src line 458)


state 8
	top_statement:  trait_declaration_statement.    (89)

	.  reduce 89 (src line 464)


state 9
	top_statement:  interface_declaration_statement.    (90)

	.  reduce 90 (src line 470)


state 10
	top_statement:  T_HALT_COMPILER.'(' ')' ';' 

	'('  shift 113
	.  error


state 11
	name:  T_NAMESPACE.T_NS_SEPARATOR namespace_name 
	top_statement:  T_NAMESPACE.namespace_name ';' 
	top_statement:  T_NAMESPACE.namespace_name '{' top_statement_list '}' 
	top_statement:  T_NAMESPACE.'{' top_statement_list '}' 

	T_STRING  shift 117
	T_NS_SEPARATOR  shift 114
	'{'  shift 116
	.  error

	namespace_name  goto 115

state 12
	top_statement:  T_USE.mixed_group_use_declaration ';' 
	top_statement:  T_USE.use_type group_use_declaration ';' 
	top_statement:  T_USE.use_declarations ';' 
	top_statement:  T_USE.use_type use_declarations ';' 

	T_STRING  shift 117
	T_FUNCTION  shift 123
	T_CONST  shift 124
	T_NS_SEPARATOR  shift 122
	.  error

	mixed_group_use_declaration  goto 118
	use_declaration  goto 125
	unprefixed_use_declaration  goto 126
	use_type  goto 119
	namespace_name  goto 121
	use_declarations  goto 120

state 13
	top_statement:  T_CONST.const_list ';' 

	T_STRING  shift 129
	.  error

	const_decl  goto 128
	const_list  goto 127

state 14
	statement:  '{'.inner_statement_list '}' 
	inner_statement_list: .    (123)

	.  reduce 123 (src line 905)

	inner_statement_list  goto 130

state 15
	statement:  if_stmt.    (132)

	.  reduce 132 (src line 982)


state 16
	statement:  alt_if_stmt.    (133)

	.  reduce 133 (src line 988)


state 17
	statement:  T_WHILE.'(' expr ')' while_statement 

	'('  shift 131
	.  error


state 18
	statement:  T_DO.statement T_WHILE '(' expr ')' ';' 

	T_INCLUDE  shift 88
	T_INCLUDE_ONCE  shift 89
	T_EXIT  shift 70
	T_IF  shift 47
	T_LNUMBER  shift 93
	T_DNUMBER  shift 94
	T_STRING  shift 36
	T_VARIABLE  shift 105
	T_INLINE_HTML  shift 27
	T_CONSTANT_ENCAPSED_STRING  shift 110
	T_ECHO  shift 26
	T_DO  shift 18
	T_WHILE  shift 17
	T_FOR  shift 19
	T_FOREACH  shift 30
	T_DECLARE  shift 31
	T_SWITCH  shift 20
	T_BREAK  shift 21
	T_CONTINUE  shift 22
	T_GOTO  shift 35
	T_FUNCTION  shift 133
	T_RETURN  shift 23
	T_TRY  shift 33
	T_THROW  shift 34
	T_GLOBAL  shift 24
	T_UNSET  shift 29
	T_ISSET  shift 86
	T_EMPTY  shift 87
	T_LIST  shift 51
	T_ARRAY  shift 109
	T_CLASS_C  shift 102
	T_TRAIT_C  shift 98
	T_METHOD_C  shift 99
	T_FUNC_C  shift 100
	T_LINE  shift 95
	T_FILE  shift 96
	T_START_HEREDOC  shift 103
	T_NAMESPACE  shift 134
	T_NS_C  shift 101
	T_DIR  shift 97
	T_NS_SEPARATOR  shift 112
	T_EVAL  shift 90
	T_REQUIRE  shift 91
	T_REQUIRE_ONCE  shift 92
	T_NEW  shift 85
	T_CLONE  shift 53
	T_PRINT  shift 74
	T_YIELD  shift 75
	T_STATIC  shift 25
	T_INC  shift 54
	T_DEC  shift 55
	T_YIELD_FROM  shift 76
	T_INT_CAST  shift 63
	T_DOUBLE_CAST  shift 64
	T_STRING_CAST  shift 65
	T_ARRAY_CAST  shift 66
	T_OBJECT_CAST  shift 67
	T_BOOL_CAST  shift 68
	T_UNSET_CAST  shift 69
	'"'  shift 104
	'`'  shift 73
	'{'  shift 14
	';'  shift 32
	'('  shift 60
	'['  shift 52
	'-'  shift 57
	'+'  shift 56
	'!'  shift 58
	'~'  shift 59
	'@'  shift 71
	'$'  shift 106
	.  error

	name  goto 107
	statement  goto 132
	expr  goto 28
	variable  goto 44
	expr_without_variable  goto 45
	new_expr  goto 61
	class_name  goto 82
	simple_variable  goto 79
	internal_functions_in_yacc  goto 62
	scalar  goto 72
	function_call  goto 81
	variable_class_name  goto 83
	dereferencable_scalar  goto 84
	constant  goto 80
	dereferencable  goto 50
	callable_expr  goto 108
	callable_variable  goto 48
	static_member  goto 49
	if_stmt  goto 15
	alt_if_stmt  goto 16
	if_stmt_without_else  goto 42
	alt_if_stmt_without_else  goto 43
	namespace_name  goto 111

state 19
	statement:  T_FOR.'(' for_exprs ';' for_exprs ';' for_exprs ')' for_statement 

	'('  shift 135
	.  error


state 20
	statement:  T_SWITCH.'(' expr ')' switch_case_list 

	'('  shift 136
	.  error


state 21
	statement:  T_BREAK.optional_expr ';' 
	optional_expr: .    (419)

	T_INCLUDE  shift 88
	T_INCLUDE_ONCE  shift 89
	T_EXIT  shift 70
	T_LNUMBER  shift 93
	T_DNUMBER  shift 94
	T_STRING  shift 117
	T_VARIABLE  shift 105
	T_CONSTANT_ENCAPSED_STRING  shift 110
	T_FUNCTION  shift 133
	T_ISSET  shift 86
	T_EMPTY  shift 87
	T_LIST  shift 51
	T_ARRAY  shift 109
	T_CLASS_C  shift 102
	T_TRAIT_C  shift 98
	T_METHOD_C  shift 99
	T_FUNC_C  shift 100
	T_LINE  shift 95
	T_FILE  shift 96
	T_START_HEREDOC  shift 103
	T_NAMESPACE  shift 134
	T_NS_C  shift 101
	T_DIR  shift 97
	T_NS_SEPARATOR  shift 112
	T_EVAL  shift 90
	T_REQUIRE  shift 91
	T_REQUIRE_ONCE  shift 92
	T_NEW  shift 85
	T_CLONE  shift 53
	T_PRINT  shift 74
	T_YIELD  shift 75
	T_STATIC  shift 139
	T_INC  shift 54
	T_DEC  shift 55
	T_YIELD_FROM  shift 76
	T_INT_CAST  shift 63
	T_DOUBLE_CAST  shift 64
	T_STRING_CAST  shift 65
	T_ARRAY_CAST  shift 66
	T_OBJECT_CAST  shift 67
	T_BOOL_CAST  shift 68
	T_UNSET_CAST  shift 69
	'"'  shift 104
	'`'  shift 73
	'('  shift 60
	'['  shift 52
	'-'  shift 57
	'+'  shift 56
	'!'  shift 58
	'~'  shift 59
	'@'  shift 71
	'$'  shift 106
	.  reduce 419 (src line 4743)

	name  goto 107
	expr  goto 138
	optional_expr  goto 137
	variable  goto 44
	expr_without_variable  goto 45
	new_expr  goto 61
	class_name  goto 82
	simple_variable  goto 79
	internal_functions_in_yacc  goto 62
	scalar  goto 72
	function_call  goto 81
	variable_class_name  goto 83
	dereferencable_scalar  goto 84
	constant  goto 80
	dereferencable  goto 50
	callable_expr  goto 108
	callable_variable  goto 48
	static_member  goto 49
	namespace_name  goto 111

state 22
	statement:  T_CONTINUE.optional_expr ';' 
	optional_expr: .    (419)

	T_INCLUDE  shift 88
	T_INCLUDE_ONCE  shift 89
	T_EXIT  shift 70
	T_LNUMBER  shift 93
	T_DNUMBER  shift 94
	T_STRING  shift 117
	T_VARIABLE  shift 105
	T_CONSTANT_ENCAPSED_STRING  shift 110
	T_FUNCTION  shift 133
	T_ISSET  shift 86
	T_EMPTY  shift 87
	T_LIST  shift 51
	T_ARRAY  shift 109
	T_CLASS_C  shift 102
	T_TRAIT_C  shift 98
	T_METHOD_C  shift 99
	T_FUNC_C  shift 100
	T_LINE  shift 95
	T_FILE  shift 96
	T_START_HEREDOC  shift 103
	T_NAMESPACE  shift 134
	T_NS_C  shift 101
	T_DIR  shift 97
	T_NS_SEPARATOR  shift 112
	T_EVAL  shift 90
	T_REQUIRE  shift 91
	T_REQUIRE_ONCE  shift 92
	T_NEW  shift 85
	T_CLONE  shift 53
	T_PRINT  shift 74
	T_YIELD  shift 75
	T_STATIC  shift 139
	T_INC  shift 54
	T_DEC  shift 55
	T_YIELD_FROM  shift 76
	T_INT_CAST  shift 63
	T_DOUBLE_CAST  shift 64
	T_STRING_CAST  shift 65
	T_ARRAY_CAST  shift 66
	T_OBJECT_CAST  shift 67
	T_BOOL_CAST  shift 68
	T_UNSET_CAST  shift 69
	'"'  shift 104
	'`'  shift 73
	'('  shift 60
	'['  shift 52
	'-'  shift 57
	'+'  shift 56
	'!'  shift 58
	'~'  shift 59
	'@'  shift 71
	'$'  shift 106
	.  reduce 419 (src line 4743)

	name  goto 107
	expr  goto 138
	optional_expr  goto 140
	variable  goto 44
	expr_without_variable  goto 45
	new_expr  goto 61
	class_name  goto 82
	simple_variable  goto 79
	internal_functions_in_yacc  goto 62
	scalar  goto 72
	function_call  goto 81
	variable_class_name  goto 83
	dereferencable_scalar  goto 84
	constant  goto 80
	dereferencable  goto 50
	callable_expr  goto 108
	callable_variable  goto 48
	static_member  goto 49
	namespace_name  goto 111

state 23
	statement:  T_RETURN.optional_expr ';' 
	optional_expr: .    (419)

	T_INCLUDE  shift 88
	T_INCLUDE_ONCE  shift 89
	T_EXIT  shift 70
	T_LNUMBER  shift 93
	T_DNUMBER  shift 94
	T_STRING  shift 117
	T_VARIABLE  shift 105
	T_CONSTANT_ENCAPSED_STRING  shift 110
	T_FUNCTION  shift 133
	T_ISSET  shift 86
	T_EMPTY  shift 87
	T_LIST  shift 51
	T_ARRAY  shift 109
	T_CLASS_C  shift 102
	T_TRAIT_C  shift 98
	T_METHOD_C  shift 99
	T_FUNC_C  shift 100
	T_LINE  shift 95
	T_FILE  shift 96
	T_START_HEREDOC  shift 103
	T_NAMESPACE  shift 134
	T_NS_C  shift 101
	T_DIR  shift 97
	T_NS_SEPARATOR  shift 112
	T_EVAL  shift 90
	T_REQUIRE  shift 91
	T_REQUIRE_ONCE  shift 92
	T_NEW  shift 85
	T_CLONE  shift 53
	T_PRINT  shift 74
	T_YIELD  shift 75
	T_STATIC  shift 139
	T_INC  shift 54
	T_DEC  shift 55
	T_YIELD_FROM  shift 76
	T_INT_CAST  shift 63
	T_DOUBLE_CAST  shift 64
	T_STRING_CAST  shift 65
	T_ARRAY_CAST  shift 66
	T_OBJECT_CAST  shift 67
	T_BOOL_CAST  shift 68
	T_UNSET_CAST  shift 69
	'"'  shift 104
	'`'  shift 73
	'('  shift 60
	'['  shift 52
	'-'  shift 57
	'+'  shift 56
	'!'  shift 58
	'~'  shift 59
	'@'  shift 71
	'$'  shift 106
	.  reduce 419 (src line 4743)

	name  goto 107
	expr  goto 138
	optional_expr  goto 141
	variable  goto 44
	expr_without_variable  goto 45
	new_expr  goto 61
	class_name  goto 82
	simple_variable  goto 79
	internal_functions_in_yacc  goto 62
	scalar  goto 72
	function_call  goto 81
	variable_class_name  goto 83
	dereferencable_scalar  goto 84
	constant  goto 80
	dereferencable  goto 50
	callable_expr  goto 108
	callable_variable  goto 48
	static_member  goto 49
	namespace_name  goto 111

state 24
	statement:  T_GLOBAL.global_var_list ';' 

	T_VARIABLE  shift 105
	'$'  shift 106
	.  error

	global_var  goto 143
	simple_variable  goto 144
	global_var_list  goto 142

state 25
	statement:  T_STATIC.static_var_list ';' 
	expr_without_variable:  T_STATIC.T_FUNCTION returns_ref backup_doc_comment '(' parameter_list ')' lexical_vars return_type '{' inner_statement_list '}' 
	class_name:  T_STATIC.    (384)

	T_VARIABLE  shift 148
	T_FUNCTION  shift 146
	.  reduce 384 (src line 4354)

	static_var  goto 147
	static_var_list  goto 145

state 26
	statement:  T_ECHO.echo_expr_list ';' 

	T_INCLUDE  shift 88
	T_INCLUDE_ONCE  shift 89
	T_EXIT  shift 70
	T_LNUMBER  shift 93
	T_DNUMBER  shift 94
	T_STRING  shift 117
	T_VARIABLE  shift 105
	T_CONSTANT_ENCAPSED_STRING  shift 110
	T_FUNCTION  shift 133
	T_ISSET  shift 86
	T_EMPTY  shift 87
	T_LIST  shift 51
	T_ARRAY  shift 109
	T_CLASS_C  shift 102
	T_TRAIT_C  shift 98
	T_METHOD_C  shift 99
	T_FUNC_C  shift 100
	T_LINE  shift 95
	T_FILE  shift 96
	T_START_HEREDOC  shift 103
	T_NAMESPACE  shift 134
	T_NS_C  shift 101
	T_DIR  shift 97
	T_NS_SEPARATOR  shift 112
	T_EVAL  shift 90
	T_REQUIRE  shift 91
	T_REQUIRE_ONCE  shift 92
	T_NEW  shift 85
	T_CLONE  shift 53
	T_PRINT  shift 74
	T_YIELD  shift 75
	T_STATIC  shift 139
	T_INC  shift 54
	T_DEC  shift 55
	T_YIELD_FROM  shift 76
	T_INT_CAST  shift 63
	T_DOUBLE_CAST  shift 64
	T_STRING_CAST  shift 65
	T_ARRAY_CAST  shift 66
	T_OBJECT_CAST  shift 67
	T_BOOL_CAST  shift 68
	T_UNSET_CAST  shift 69
	'"'  shift 104
	'`'  shift 73
	'('  shift 60
	'['  shift 52
	'-'  shift 57
	'+'  shift 56
	'!'  shift 58
	'~'  shift 59
	'@'  shift 71
	'$'  shift 106
	.  error

	name  goto 107
	expr  goto 151
	variable  goto 44
	expr_without_variable  goto 45
	echo_expr  goto 150
	new_expr  goto 61
	class_name  goto 82
	simple_variable  goto 79
	internal_functions_in_yacc  goto 62
	scalar  goto 72
	function_call  goto 81
	variable_class_name  goto 83
	dereferencable_scalar  goto 84
	constant  goto 80
	dereferencable  goto 50
	callable_expr  goto 108
	callable_variable  goto 48
	static_member  goto 49
	namespace_name  goto 111
	echo_expr_list  goto 149

state 27
	statement:  T_INLINE_HTML.    (144)

	.  reduce 144 (src line 1159)


state 28
	statement:  expr.';' 
	expr_without_variable:  expr.T_BOOLEAN_OR expr 
	expr_without_variable:  expr.T_BOOLEAN_AND expr 
	expr_without_variable:  expr.T_LOGICAL_OR expr 
	expr_without_variable:  expr.T_LOGICAL_AND expr 
	expr_without_variable:  expr.T_LOGICAL_XOR expr 
	expr_without_variable:  expr.'|' expr 
	expr_without_variable:  expr.'&' expr 
	expr_without_variable:  expr.'^' expr 
	expr_without_variable:  expr.'.' expr 
	expr_without_variable:  expr.'+' expr 
	expr_without_variable:  expr.'-' expr 
	expr_without_variable:  expr.'*' expr 
	expr_without_variable:  expr.T_POW expr 
	expr_without_variable:  expr.'/' expr 
	expr_without_variable:  expr.'%' expr 
	expr_without_variable:  expr.T_SL expr 
	expr_without_variable:  expr.T_SR expr 
	expr_without_variable:  expr.T_IS_IDENTICAL expr 
	expr_without_variable:  expr.T_IS_NOT_IDENTICAL expr 
	expr_without_variable:  expr.T_IS_EQUAL expr 
	expr_without_variable:  expr.T_IS_NOT_EQUAL expr 
	expr_without_variable:  expr.'<' expr 
	expr_without_variable:  expr.T_IS_SMALLER_OR_EQUAL expr 
	expr_without_variable:  expr.'>' expr 
	expr_without_variable:  expr.T_IS_GREATER_OR_EQUAL expr 
	expr_without_variable:  expr.T_SPACESHIP expr 
	expr_without_variable:  expr.T_INSTANCEOF class_name_reference 
	expr_without_variable:  expr.'?' expr ':' expr 
	expr_without_variable:  expr.'?' ':' expr 
	expr_without_variable:  expr.T_COALESCE expr 

	T_LOGICAL_OR  shift 155
	T_LOGICAL_XOR  shift 157
	T_LOGICAL_AND  shift 156
	T_INSTANCEOF  shift 179
	T_COALESCE  shift 181
	T_SPACESHIP  shift 178
	T_BOOLEAN_OR  shift 153
	T_BOOLEAN_AND  shift 154
	T_POW  shift 165
	T_SL  shift 168
	T_SR  shift 169
	T_IS_IDENTICAL  shift 170
	T_IS_NOT_IDENTICAL  shift 171
	T_IS_EQUAL  shift 172
	T_IS_NOT_EQUAL  shift 173
	T_IS_SMALLER_OR_EQUAL  shift 175
	T_IS_GREATER_OR_EQUAL  shift 177
	';'  shift 152
	'?'  shift 180
	'&'  shift 159
	'-'  shift 163
	'+'  shift 162
	'|'  shift 158
	'^'  shift 160
	'*'  shift 164
	'/'  shift 166
	'%'  shift 167
	'<'  shift 174
	'>'  shift 176
	'.'  shift 161
	.  error


state 29
	statement:  T_UNSET.'(' unset_variables possible_comma ')' ';' 

	'('  shift 182
	.  error


state 30
	statement:  T_FOREACH.'(' expr T_AS foreach_variable ')' foreach_statement 
	statement:  T_FOREACH.'(' expr T_AS variable T_DOUBLE_ARROW foreach_variable ')' foreach_statement 

	'('  shift 183
	.  error


state 31
	statement:  T_DECLARE.'(' const_list ')' declare_statement 

	'('  shift 184
	.  error


state 32
	statement:  ';'.    (150)

	.  reduce 150 (src line 1265)


state 33
	statement:  T_TRY.'{' inner_statement_list '}' catch_list finally_statement 

	'{'  shift 185
	.  error


state 34
	statement:  T_THROW.expr ';' 

	T_INCLUDE  shift 88
	T_INCLUDE_ONCE  shift 89
	T_EXIT  shift 70
	T_LNUMBER  shift 93
	T_DNUMBER  shift 94
	T_STRING  shift 117
	T_VARIABLE  shift 105
	T_CONSTANT_ENCAPSED_STRING  shift 110
	T_FUNCTION  shift 133
	T_ISSET  shift 86
	T_EMPTY  shift 87
	T_LIST  shift 51
	T_ARRAY  shift 109
	T_CLASS_C  shift 102
	T_TRAIT_C  shift 98
	T_METHOD_C  shift 99
	T_FUNC_C  shift 100
	T_LINE  shift 95
	T_FILE  shift 96
	T_START_HEREDOC  shift 103
	T_NAMESPACE  shift 134
	T_NS_C  shift 101
	T_DIR  shift 97
	T_NS_SEPARATOR  shift 112
	T_EVAL  shift 90
	T_REQUIRE  shift 91
	T_REQUIRE_ONCE  shift 92
	T_NEW  shift 85
	T_CLONE  shift 53
	T_PRINT  shift 74
	T_YIELD  shift 75
	T_STATIC  shift 139
	T_INC  shift 54
	T_DEC  shift 55
	T_YIELD_FROM  shift 76
	T_INT_CAST  shift 63
	T_DOUBLE_CAST  shift 64
	T_STRING_CAST  shift 65
	T_ARRAY_CAST  shift 66
	T_OBJECT_CAST  shift 67
	T_BOOL_CAST  shift 68
	T_UNSET_CAST  shift 69
	'"'  shift 104
	'`'  shift 73
	'('  shift 60
	'['  shift 52
	'-'  shift 57
	'+'  shift 56
	'!'  shift 58
	'~'  shift 59
	'@'  shift 71
	'$'  shift 106
	.  error

	name  goto 107
	expr  goto 186
	variable  goto 44
	expr_without_variable  goto 45
	new_expr  goto 61
	class_name  goto 82
	simple_variable  goto 79
	internal_functions_in_yacc  goto 62
	scalar  goto 72
	function_call  goto 81
	variable_class_name  goto 83
	dereferencable_scalar  goto 84
	constant  goto 80
	dereferencable  goto 50
	callable_expr  goto 108
	callable_variable  goto 48
	static_member  goto 49
	namespace_name  goto 111

state 35
	statement:  T_GOTO.T_STRING ';' 

	T_STRING  shift 187
	.  error


state 36
	namespace_name:  T_STRING.    (80)
	statement:  T_STRING.':' 

	':'  shift 188
	.  reduce 80 (src line 368)


state 37
	function_declaration_statement:  T_FUNCTION.returns_ref T_STRING backup_doc_comment '(' parameter_list ')' return_type '{' inner_statement_list '}' 
	expr_without_variable:  T_FUNCTION.returns_ref backup_doc_comment '(' parameter_list ')' lexical_vars return_type '{' inner_statement_list '}' 
	returns_ref: .    (372)

	'&'  shift 190
	.  reduce 372 (src line 4213)

	returns_ref  goto 189

state 38
	class_declaration_statement:  class_modifiers.T_CLASS T_STRING extends_from implements_list backup_doc_comment '{' class_statement_list '}' 
	class_modifiers:  class_modifiers.class_modifier 

	T_CLASS  shift 191
	T_ABSTRACT  shift 77
	T_FINAL  shift 78
	.  error

	class_modifier  goto 192

state 39
	class_declaration_statement:  T_CLASS.T_STRING extends_from implements_list backup_doc_comment '{' class_statement_list '}' 

	T_STRING  shift 193
	.  error


state 40
	trait_declaration_statement:  T_TRAIT.T_STRING backup_doc_comment '{' class_statement_list '}' 

	T_STRING  shift 194
	.  error


state 41
	interface_declaration_statement:  T_INTERFACE.T_STRING interface_extends_list backup_doc_comment '{' class_statement_list '}' 

	T_STRING  shift 195
	.  error


state 42
	if_stmt_without_else:  if_stmt_without_else.T_ELSEIF '(' expr ')' statement 
	if_stmt:  if_stmt_without_else.    (206)
	if_stmt:  if_stmt_without_else.T_ELSE statement 

	T_ELSEIF  shift 196
	T_ELSE  shift 197
	.  reduce 206 (src line 2011)


state 43
	alt_if_stmt_without_else:  alt_if_stmt_without_else.T_ELSEIF '(' expr ')' ':' inner_statement_list 
	alt_if_stmt:  alt_if_stmt_without_else.T_ENDIF ';' 
	alt_if_stmt:  alt_if_stmt_without_else.T_ELSE ':' inner_statement_list T_ENDIF ';' 

	T_ELSEIF  shift 198
	T_ELSE  shift 200
	T_ENDIF  shift 199
	.  error


state 44
	expr_without_variable:  variable.'=' expr 
	expr_without_variable:  variable.'=' '&' expr 
	expr_without_variable:  variable.T_PLUS_EQUAL expr 
	expr_without_variable:  variable.T_MINUS_EQUAL expr 
	expr_without_variable:  variable.T_MUL_EQUAL expr 
	expr_without_variable:  variable.T_POW_EQUAL expr 
	expr_without_variable:  variable.T_DIV_EQUAL expr 
	expr_without_variable:  variable.T_CONCAT_EQUAL expr 
	expr_without_variable:  variable.T_MOD_EQUAL expr 
	expr_without_variable:  variable.T_AND_EQUAL expr 
	expr_without_variable:  variable.T_OR_EQUAL expr 
	expr_without_variable:  variable.T_XOR_EQUAL expr 
	expr_without_variable:  variable.T_SL_EQUAL expr 
	expr_without_variable:  variable.T_SR_EQUAL expr 
	expr_without_variable:  variable.T_INC 
	expr_without_variable:  variable.T_DEC 
	expr:  variable.    (417)
	dereferencable:  variable.    (422)

	T_OBJECT_OPERATOR  reduce 422 (src line 4767)
	T_PAAMAYIM_NEKUDOTAYIM  reduce 422 (src line 4767)
	T_INC  shift 214
	T_DEC  shift 215
	T_PLUS_EQUAL  shift 202
	T_MINUS_EQUAL  shift 203
	T_MUL_EQUAL  shift 204
	T_POW_EQUAL  shift 205
	T_DIV_EQUAL  shift 206
	T_CONCAT_EQUAL  shift 207
	T_MOD_EQUAL  shift 208
	T_AND_EQUAL  shift 209
	T_OR_EQUAL  shift 210
	T_XOR_EQUAL  shift 211
	T_SL_EQUAL  shift 212
	T_SR_EQUAL  shift 213
	'{'  reduce 422 (src line 4767)
	'['  reduce 422 (src line 4767)
	'='  shift 201
	.  reduce 417 (src line 4728)


state 45
	expr:  expr_without_variable.    (418)

	.  reduce 418 (src line 4735)


state 46
	class_modifiers:  class_modifier.    (171)

	.  reduce 171 (src line 1537)


state 47
	if_stmt_without_else:  T_IF.'(' expr ')' statement 
	alt_if_stmt_without_else:  T_IF.'(' expr ')' ':' inner_statement_list 

	'('  shift 216
	.  error


state 48
	callable_expr:  callable_variable.    (425)
	variable:  callable_variable.    (434)

	'('  reduce 425 (src line 4792)
	.  reduce 434 (src line 4887)


state 49
	variable:  static_member.    (435)

	.  reduce 435 (src line 4894)


state 50
	variable_class_name:  dereferencable.    (421)
	callable_variable:  dereferencable.'[' optional_expr ']' 
	callable_variable:  dereferencable.'{' expr '}' 
	callable_variable:  dereferencable.T_OBJECT_OPERATOR property_name argument_list 
	variable:  dereferencable.T_OBJECT_OPERATOR property_name 

	T_OBJECT_OPERATOR  shift 219
	'{'  shift 218
	'['  shift 217
	.  reduce 421 (src line 4758)


state 51
	expr_without_variable:  T_LIST.'(' array_pair_list ')' '=' expr 

	'('  shift 220
	.  error


state 52
	expr_without_variable:  '['.array_pair_list ']' '=' expr 
	dereferencable_scalar:  '['.array_pair_list ']' 
	possible_array_pair: .    (455)

	T_INCLUDE  shift 88
	T_INCLUDE_ONCE  shift 89
	T_EXIT  shift 70
	T_LNUMBER  shift 93
	T_DNUMBER  shift 94
	T_STRING  shift 117
	T_VARIABLE  shift 105
	T_CONSTANT_ENCAPSED_STRING  shift 110
	T_FUNCTION  shift 133
	T_ISSET  shift 86
	T_EMPTY  shift 87
	T_LIST  shift 227
	T_ARRAY  shift 109
	T_CLASS_C  shift 102
	T_TRAIT_C  shift 98
	T_METHOD_C  shift 99
	T_FUNC_C  shift 100
	T_LINE  shift 95
	T_FILE  shift 96
	T_START_HEREDOC  shift 103
	T_NAMESPACE  shift 134
	T_NS_C  shift 101
	T_DIR  shift 97
	T_NS_SEPARATOR  shift 112
	T_EVAL  shift 90
	T_REQUIRE  shift 91
	T_REQUIRE_ONCE  shift 92
	T_NEW  shift 85
	T_CLONE  shift 53
	T_PRINT  shift 74
	T_YIELD  shift 75
	T_STATIC  shift 139
	T_INC  shift 54
	T_DEC  shift 55
	T_YIELD_FROM  shift 76
	T_INT_CAST  shift 63
	T_DOUBLE_CAST  shift 64
	T_STRING_CAST  shift 65
	T_ARRAY_CAST  shift 66
	T_OBJECT_CAST  shift 67
	T_BOOL_CAST  shift 68
	T_UNSET_CAST  shift 69
	'"'  shift 104
	'`'  shift 73
	'('  shift 60
	'['  shift 52
	'&'  shift 226
	'-'  shift 57
	'+'  shift 56
	'!'  shift 58
	'~'  shift 59
	'@'  shift 71
	'$'  shift 106
	.  reduce 455 (src line 5137)
